# mam

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  PLAN-OFFLINETOPOSCHEDULER.md  PLAN.md  README.md  __AUTO__  breakbeat.json  breakbeat_full.json  demo.json  demo2.json  graph_topo.mmd  metrics.ndjson  mygraph.json  session.mmd  session_cmds.ndjson  test.pkf  two_kicks.json  two_kicks.pkf  two_kicks_clap.pkf  xfader.ndjson
build.bak.1760465423/: CMakeCache.txt  Makefile  cmake_install.cmake  gen_params  mam
build.bak.1760465423/.cmake/api/v1/reply/: error-2025-10-14T17-58-02-0399.json
cmake-3.28.1-macos-universal/CMake.app/Contents/: CodeResources  Info.plist
cmake-3.28.1-macos-universal/CMake.app/Contents/Frameworks/QtPrintSupport.framework/Versions/5/: QtPrintSupport
cmake-3.28.1-macos-universal/CMake.app/Contents/PlugIns/styles/: libqmacstyle.dylib
cmake-3.28.1-macos-universal/CMake.app/Contents/_CodeSignature/: CodeResources
docs/: LFO.md  MAMAudioCore.md  MAMIC.md  ParamTables.md  SESSION.md  SessionBuses.md  Sidechain.md  schema.graph.v1.json
examples/: acid303.json  acid303_lfo_phase_steps.json  acid303_sidechain.json  acid303_sidechain_adsr.json  acid303_sidechain_spectral.json  acid303_sidechain_spectral_dynamicEq.json  acid303_sidechain_spectral_midSide.json  acid303_sidechain_steps.json  demo.json  demo2.json  demo_velocity.json  mamic_chiptune_30s.json  mamic_psg_minimal.json  mamic_song.json  session_buses_samples.json  session_minimal.json  session_minimal_xfaders.json  session_xfader_automation.json  session_xfader_automation_aligned.json  sidechain_bus_key.json  sidechain_mono_key.json  sidechain_post_effect_duck.json  sidechain_shared_key.json  sidechain_stereo_key_to_mono.json
examples/rack/: acid303.json  acid303_lfo_phase_steps.json  acid303_sidechain.json  acid303_sidechain_adsr.json  acid303_sidechain_spectral.json  acid303_sidechain_spectral_4bars.json  acid303_sidechain_spectral_dynamicEq.json  acid303_sidechain_spectral_midSide.json  acid303_sidechain_steps.json  demo.json  demo2.json  demo_velocity.json  mamic_chiptune_30s.json  mamic_psg_minimal.json  multiport_sidechain.json  sidechain_bus_key.json  sidechain_mono_key.json  sidechain_post_effect_duck.json  sidechain_shared_key.json  sidechain_stereo_key_to_mono.json  swing_extreme.json  swing_linear.json  swing_none.json  swing_shaped.json
examples/session/: session_buses_samples.json  session_minimal.json  session_minimal_xfaders.json  session_xfader_automation.json  session_xfader_automation_aligned.json  swing_session_abs.json  swing_session_musical.json
src/: main.cpp
src/core/: AudioBuffer.hpp  Command.hpp  CompressorNode.hpp  DelayNode.hpp  Graph.hpp  GraphConfig.cpp  GraphConfig.hpp  GraphUtils.hpp  Instrument.hpp  JobPool.hpp  MeterNode.hpp  MixerNode.hpp  ModMatrix.hpp  Node.hpp  NodeFactory.hpp  OsStatusUtils.hpp  ParamIds.hpp  ParamMap.hpp  ParameterRegistry.hpp  Random.hpp  ReverbNode.hpp  SchemaValidate.cpp  SchemaValidate.hpp  ScopedAudioUnit.hpp  Sha1.hpp  SpectralDuckerNode.hpp  TransportNode.hpp  WiretapNode.hpp
src/dsp/: KickSynth.hpp
src/instruments/clap/: ClapFactory.hpp  ClapNode.hpp  ClapSynth.cpp  ClapSynth.hpp
src/instruments/kick/: KickFactory.hpp  KickNode.hpp  KickSynth.cpp  KickSynth.hpp
src/instruments/mam_chip/: MamChipFactory.hpp  MamChipNode.hpp
src/instruments/tb303/: Tb303ExtNode.hpp  Tb303ExtSynth.hpp
src/io/: AudioFileWriter.cpp  AudioFileWriter.hpp
src/offline/: BufferPool.hpp  OfflineGraphRenderer.hpp  OfflineParallelGraphRenderer.hpp  OfflineProgress.hpp  OfflineRenderer.hpp  OfflineTimelineRenderer.hpp  OfflineTopoScheduler.hpp  TransportGenerator.hpp
src/realtime/: RealtimeGraphRenderer.hpp  RealtimeRenderer.hpp  RealtimeSessionRenderer.hpp
src/session/: SessionRuntime.hpp  SessionSpec.hpp
tools/: gen_params.cpp
